# iflow

./: README.md  pyproject.toml  setup.py
examples/: train_drums.py  train_iros.py  train_lasa.py  train_pouring.py
iflow/model/: container.py
iflow/model/flows/: lu.py  permutation.py
iflow/test_measures/: trajectory_metrics.py
iflow/visualization/: visualize_latent_distr.py
